fix voter alignment mobile

--- a/src/components/Article.css
+++ b/src/components/Article.css
@@ -2,7 +2,6 @@
   margin-top: 2rem;
   display: flex;
   justify-content: space-between;
-  /* background-color: rgba(0, 0, 0, 0.1); */
   background-color: rgba(255, 255, 255, 0.7);
 }
 
@@ -49,14 +48,12 @@
   }
 }
 
-/* @media screen and (max-width: 600px) {
-  .article-individual,
-  .article-info,
-  .title_case,
-  .article-body {
-    width: 98%;
+@media screen and (max-width: 600px) {
+  .article-individual {
+    width: 92%;
+    margin-right: 1rem;
   }
-} */
+}
 
 @media screen and (max-width: 600px) {
   .article-info {
@@ -66,6 +63,12 @@
     flex-direction: row;
     margin-right: 0rem;
     margin-left: 1rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .article-info__list {
+    max-width: 32%;
   }
 }
 
