--- a/src/components/Comments.css
+++ b/src/components/Comments.css
@@ -10,7 +10,6 @@
   line-height: 1.5rem;
   font-size: 1rem;
   margin-right: 3rem;
-  /* background-color: rgba(0, 0, 0, 0.1); */
   background-color: rgba(255, 255, 255, 0.7);
   margin-bottom: 1rem;
 }
@@ -25,7 +24,6 @@
   display: flex;
   justify-content: space-between;
   background-color: rgba(0, 0, 0, 0.1);
-  /* background-color: rgba(255, 255, 255, 0.7); */
   margin-bottom: 2rem;
 }
 
@@ -90,7 +88,6 @@
     line-height: 1.5rem;
     font-size: 1rem;
     margin-right: 3rem;
-    /* background-color: rgba(0, 0, 0, 0.1); */
     background-color: rgba(255, 255, 255, 0.7);
     margin-bottom: 1rem;
   }
@@ -98,6 +95,7 @@
 
 @media screen and (max-width: 600px) {
   .comment-individual {
+    width: 92%;
     text-align: left;
     align-items: flex-start;
     margin-right: 0rem;
@@ -111,7 +109,7 @@
     text-align: left;
     align-items: flex-start;
     flex-direction: row;
-    margin-right: 0rem;
+    margin-right: 1rem;
     margin-left: 1rem;
   }
 }
@@ -125,7 +123,6 @@
 @media screen and (max-width: 600px) {
   .vote-up-container--comment {
     display: flex;
-    /* margin-left: 9rem; */
   }
 }
 
